# system-monitor

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/monitor/: system_stats.cpp  system_stats.h  system_stats.hpp
src/server/: http_server.cpp  http_server.h  http_server.hpp
web/: index.html
